# cc-sessions

./: .gitignore  CHANGELOG.md  CLAUDE.bak.md  CLAUDE.md  CLAUDE.sessions.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  WARP.md  cc-sessions-0.2.9.tgz  daic.js  install.js  install.sh  issue.txt  package-lock.json  package.json  pyproject.toml  sketchpad.md  toggle-language.sh
.claude/: settings.json
.claude/agents/: context-refinement.md
.claude/hooks/: post-tool-use.py  task-transcript-link.py  user-messages.py
.claude/state/: current_task.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
cc_sessions/: __init__.py  daic.py  install.js  install.py
cc_sessions.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cc_sessions/agents/: context-gathering.md  context-refinement.md  learning-recorder.md  logging.md  service-documentation.md
cc_sessions/commands/: add-compaction-trigger.md  add-daic-trigger.md  add-task-completion-trigger.md  add-task-creation-trigger.md  add-task-start-trigger.md  add-trigger.md  api-mode.md  sesh-config.md  sesh-state.md  sessions.md  todos.md
cc_sessions/hooks/: kickstart_session_start.js  kickstart_session_start.py  o-post-tool-use.py  o-session-start.py  o-sessions-enforce.py  o-shared_state.py  post-tool-use.py  post_tool_use.js  post_tool_use.py  session-start.py  session_start.js  session_start.py  sessions-enforce.py  sessions_enforce.js  sessions_enforce.py  shared_state.js  shared_state.py  subagent-hooks.py  task-transcript-link.py  user-messages.py  (+2 more)
docs/: INSTALL.md  NEW_FEATURES.md  USAGE_GUIDE.md
hooks/: session-start.py  sessions-enforce.py  user-messages.py
protocols/: context-open.md
scripts/: check-version-sync.sh  daic  prepare-release.py  publish-release.py
sessions/: sessions-config.json  sessions-state.json
templates/: CLAUDE.sessions.md
(+202 files in other folders)
