[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-sessions"
version = "0.2.7"
description = "Claude Code Sessions Framework - Enforced methodology for AI pair programming"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "toast", email = "toast_x@bytebot.site"},
]
keywords = [
    "claude",
    "claude-code",
    "ai",
    "pair-programming",
    "daic",
    "workflow",
    "development",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.8"
dependencies = [
    "tiktoken>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/GWUDCAP/cc-sessions"
Documentation = "https://github.com/GWUDCAP/cc-sessions#readme"
Repository = "https://github.com/GWUDCAP/cc-sessions.git"
Issues = "https://github.com/GWUDCAP/cc-sessions/issues"

[project.scripts]
cc-sessions = "cc_sessions.install:main"
cc-sessions-install = "cc_sessions.install:main"

[tool.setuptools]
packages = ["cc_sessions"]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
    "hooks/*.py",
    "protocols/*.md", 
    "agents/*.md",
    "commands/*.md",
    "templates/*.md",
    "templates/*.py",
    "scripts/*",
    "knowledge/**/*",
]
